--- a/alignment/templates/index.html
+++ b/alignment/templates/index.html
@@ -11,11 +11,25 @@
             <dl>
                 {{ render_field(input_form.gene_name) }}
                 {{ render_field(input_form.gene_content) }}
+                {{ render_field(input_form.gene_submit) }}
+
             </dl>
-            <p><input type=submit>         
         </form>
     </header>
 </section>
+<section class="content">
+    <header>
+        {% from "_formhelpers.html" import render_field %}
+        <form method="post">
+            <dl>
+                {{ render_field(align_form.do_alignment) }}
+                {{ render_field(align_form.align_submit) }}
+
+            </dl>
+        </form>
+    </header>
+</section>
+
 <section class="content">
     <p>
         <pre>
