--- a/alignment/templates/_formhelpers.html
+++ b/alignment/templates/_formhelpers.html
@@ -10,3 +10,17 @@
     {% endif %}
     </dd>
 {% endmacro %}
+
+{% macro render_checked_field(field) %}
+    <dt>{{ field.label }}
+    <dd>{{ field(checked=True)|safe }}
+    {% if field.errors %}
+        <ul class=errors>
+        {% for error in field.errors %}
+            <li>{{ error }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+    </dd>
+{% endmacro %}
+
