--- a/alignment/templates/_formhelpers.html
+++ b/alignment/templates/_formhelpers.html
@@ -1,6 +1,6 @@
 {% macro render_field(field) %}
-    <dt>{{ field.label }}
-    <dd>{{ field(**kwargs)|safe }}
+    {{ field.label }}
+    {{ field(**kwargs)|safe }}
     {% if field.errors %}
         <ul class=errors>
         {% for error in field.errors %}
@@ -8,19 +8,4 @@
         {% endfor %}
         </ul>
     {% endif %}
-    </dd>
 {% endmacro %}
-
-{% macro render_checked_field(field) %}
-    <dt>{{ field.label }}
-    <dd>{{ field(checked=True)|safe }}
-    {% if field.errors %}
-        <ul class=errors>
-        {% for error in field.errors %}
-            <li>{{ error }}</li>
-        {% endfor %}
-        </ul>
-    {% endif %}
-    </dd>
-{% endmacro %}
-
