Changed form implementation.

--- a/alignment/templates/index.html
+++ b/alignment/templates/index.html
@@ -25,11 +25,11 @@
             </ul>
           </div>
           <div class="card-body">
-            <h4 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            {{ render_form(gene_form) }}
-            {{ render_form(settings_form) }}
-            {{ render_form(wipe_form) }}
+            <h4 class="card-title">A Medicore Gene Aligner</h5>
+            <p class="card-text">Enter a pair of genes below!.</p>
+            {{ render_form(align_form) }}
+            <!-- render this to replace the other
+            {{ render_form(another_form) }} -->
           </div>
         </div>
     </div>
