Added unit tests for clustalo_align and forms module

--- a/alignment/templates/align.html
+++ b/alignment/templates/align.html
@@ -1,6 +1,6 @@
 <form method="post">
     <div class="container">
-        {{ align_form.csrf_token() }}
+            {{ align_form.csrf_token }}
         <div class="row">
             <div class="col">
                {{ render_field(align_form.gene1_name) }}                       
