--- a/alignment/templates/another.html
+++ b/alignment/templates/another.html
@@ -1,6 +1,6 @@
 <form method="post">
     <div class="container">
-            {{ another_form.csrf_token() }}
+            {{ another_form.csrf_token }}
            {{ render_field(another_form.gene_name) }}                       
            {{ render_field(another_form.gene_content) }}                 
                 <div class="row">
