--- a/alignment/templates/index.html
+++ b/alignment/templates/index.html
@@ -17,9 +17,16 @@
 
     <div class="text-center mb-4">
         <h1 class="h3 mb-3">A Mediocre Gene Aligner</h1>
+        
+        <div class="col-xs-12" style="height:20px;"></div>
         <p>
-            Minimalistic, tunable gene aligner. Powered by the awesome folks at <a href="http://www.clustal.org/omega/">Clustalo</a>.
+        
+            Minimalistic, tunable gene aligner. Powered by <a href="http://www.clustal.org/omega/" target="_blank">Clustalo</a>.
         </p>
+        <p>
+            Check out my other <a href="https://github.com/kennyworkman" target="_blank">projects</a>.
+        </p>
+        <div class="col-xs-12" style="height:20px;"></div>
     </div>
 
 
