Changed some wording in the template.

--- a/alignment/templates/index.html
+++ b/alignment/templates/index.html
@@ -21,10 +21,10 @@
         <div class="col-xs-12" style="height:20px;"></div>
         <p>
         
-            Minimalistic, tunable gene aligner. Powered by <a href="http://www.clustal.org/omega/" target="_blank">Clustalo</a>.
+            Minimalistic, tunable. Powered by <a href="http://www.clustal.org/omega/" target="_blank">Clustalo</a>.
         </p>
         <p>
-            Check out my other <a href="https://github.com/kennyworkman" target="_blank">projects</a>.
+            Check out my <a href="https://github.com/kennyworkman" target="_blank">other projects</a>.
         </p>
         <div class="col-xs-12" style="height:20px;"></div>
     </div>
