--- a/alignment/templates/index.html
+++ b/alignment/templates/index.html
@@ -19,11 +19,8 @@
 
     <div class="text-center mb-4">
       <h1 class="h3 mb-3">A Mediocre Gene Aligner</h1>
-
-      <div class="col-xs-12" style="height:20px;"></div>
       <p>
-        Minimalistic, tunable. Powered by
-        <a href="http://www.clustal.org/omega/" target="_blank">Clustalo</a>.
+        Minimalistic, tunable.
       </p>
       <p>
         Check out my
