Added links to code and docs.

--- a/alignment/templates/index.html
+++ b/alignment/templates/index.html
@@ -23,9 +23,11 @@
         Minimalistic, tunable.
       </p>
       <p>
-        Check out my
-        <a href="https://github.com/kennyworkman" target="_blank"
-          >other projects</a
+        Read the
+        <a href="/docs" target="_blank">docs</a>
+        or see the
+        <a href="https://github.com/kennyworkman/alignment-app" target="_blank"
+          >code</a
         >.
       </p>
       <div class="col-xs-12" style="height:20px;"></div>
